# audio-converter-notcurses

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml
config/: converter.yml
include/converter/: AudioConverter.hpp  MP3ToOpusConverter.hpp
include/tui/: BaseScreen.hpp  Config.hpp  FileBrowser.hpp  Signal.hpp  State.hpp  StateMachine.hpp  Subframe.hpp  TestScreen.hpp  WelcomeScreen.hpp
src/converter/: AudioConverter.cpp  MP3ToOpusConverter.cpp
src/tui/: BaseScreen.cpp  Config.cpp  FileBrowser.cpp  Signal.cpp  StateMachine.cpp  Subframe.cpp  TestScreen.cpp  WelcomeScreen.cpp  main.cpp  nc_hello.cpp
